fix --add-opens added for compilation tests