@@ -185,6 +185,11 @@
           <trimStackTrace>false</trimStackTrace>
           <forkMode>never</forkMode>
           <forkCount>1</forkCount>
+          <argLine>
+            --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+            --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+            --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+          </argLine>
         </configuration>
         <dependencies>
           <dependency>
